# opengl_triangle

./: CMakeLists.txt  README.md  main.cpp
res/shader/: prime.glsl
